[STR] Story day2 (#27)
* [STR] Start day2

* [STR] Start night 2

* [QA] Ortho and expressions corrections

* [STR] Add first END

Continue the story and make a few corrections

* [DEV] Change Mike color

Make it easier to read

* [STR] Start day2

* [STR] Start night 2

* [QA] Ortho and expressions corrections

* [STR] Add first END

Continue the story and make a few corrections

* [DEV] Change Mike color

Make it easier to read

Co-authored-by: law <lawrencio@outlook.fr>

--- a/src/html_engine/style.css
+++ b/src/html_engine/style.css
@@ -193,7 +193,7 @@ p.choice a {
 }
 
 .mike_speak {
-	color: #1739d1;
+	color: #0575ff;
 }
 
 .steve_speak {
@@ -206,6 +206,10 @@ p.choice a {
 
 .vanessa_speak {
 	color: #ab3e91;
+}
+
+.faceless_speak {
+	color: #fc2c03;
 }
 
 .others_speak {
